2012-11-09 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.9.2