@@ -1,2 +1,5 @@
+2013-01-17 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
+	* Add --quiet option to reduce verbosity
+
 2012-11-09 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Release: 0.9.2
